--- a/.github/workflows/commit-validation-and-sync.yml
+++ b/.github/workflows/commit-validation-and-sync.yml
@@ -2,9 +2,9 @@ name: Commit Validation and Template Sync
 
 on:
   push:
-    branches: [ main, master, develop ]
+    branches: ~
   pull_request:
-    branches: [ main, master, develop ]
+    branches: ~
 
 env:
   # Template repository configuration
@@ -61,14 +61,14 @@ jobs:
     outputs:
       should-run: ${{ steps.check.outputs.should-run }}
       is-template-repo: ${{ steps.check.outputs.is-template-repo }}
-    
+
     steps:
       - name: Check if this is the template repository
         id: check
         run: |
           echo "Current repository: ${{ github.repository }}"
           echo "Template repository: ${{ env.TEMPLATE_REPO }}"
-          
+
           if [ "${{ github.repository }}" = "${{ env.TEMPLATE_REPO }}" ]; then
             echo "is-template-repo=true" >> $GITHUB_OUTPUT
             echo "should-run=false" >> $GITHUB_OUTPUT
@@ -152,7 +152,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate-commit-msg, check-source-repository, detect-changes]
     if: needs.check-source-repository.outputs.should-run == 'true' && needs.detect-changes.outputs.has-changes == 'true'
-    
+
     steps:
       - name: Checkout source repository
         uses: actions/checkout@v4
@@ -190,7 +190,7 @@ jobs:
           cd template-repo
           BRANCH_NAME="${{ steps.repo-name.outputs.branch-name }}"
           echo "🌿 Creating branch: $BRANCH_NAME in template repository"
-          
+
           # Create and switch to new branch
           git checkout -b "$BRANCH_NAME"
           echo "✅ Branch $BRANCH_NAME created and switched successfully"
@@ -198,14 +198,14 @@ jobs:
       - name: Copy changed files to template repo
         run: |
           echo "📁 Copying changed files to template repository..."
-          
+
           # Copy .windsurf changes if any
           if [ "${{ needs.detect-changes.outputs.windsurf-changed }}" == "true" ]; then
             echo "📋 Copying .windsurf directory..."
             cp -r source-repo/.windsurf/* template-repo/.windsurf/
             echo "✅ .windsurf directory copied"
           fi
-          
+
           # Copy .rag-docs changes if any
           if [ "${{ needs.detect-changes.outputs.rag-docs-changed }}" == "true" ]; then
             echo "📋 Copying .rag-docs directory..."
@@ -218,18 +218,18 @@ jobs:
         run: |
           SUMMARY="feat: Sync changes from ${{ needs.detect-changes.outputs.source-repo }}\n\n"
           SUMMARY+="Changes detected in:\n"
-          
+
           if [ "${{ needs.detect-changes.outputs.windsurf-changed }}" == "true" ]; then
             SUMMARY+="- ✅ .windsurf/ directory\n"
           fi
-          
+
           if [ "${{ needs.detect-changes.outputs.rag-docs-changed }}" == "true" ]; then
             SUMMARY+="- ✅ .rag-docs/ directory\n"
           fi
-          
+
           SUMMARY+="\nSource commit: ${{ needs.detect-changes.outputs.commit-sha }}\n"
           SUMMARY+="Sync date: $(date -u '+%Y-%m-%d %H:%M:%S UTC')\n"
-          
+
           # Save summary to file for later use
           echo -e "$SUMMARY" > /tmp/commit_message.txt
           echo "Summary created:"
@@ -239,24 +239,24 @@ jobs:
         run: |
           cd template-repo
           echo "🔍 Checking for changes to commit..."
-          
+
           # Stage only the target directories
           if [ "${{ needs.detect-changes.outputs.windsurf-changed }}" == "true" ]; then
             echo "📁 Staging .windsurf directory..."
             git add .windsurf/
           fi
-          
+
           if [ "${{ needs.detect-changes.outputs.rag-docs-changed }}" == "true" ]; then
             echo "📁 Staging .rag-docs directory..."
             git add .rag-docs/
           fi
-          
+
           # Check if there are staged changes
           if git diff --cached --quiet; then
             echo "❌ No staged changes found. Skipping commit."
             exit 0
           fi
-          
+
           echo "✅ Changes staged successfully"
           git status
 
@@ -279,13 +279,13 @@ jobs:
         run: |
           cd template-repo
           BRANCH_NAME="${{ steps.repo-name.outputs.branch-name }}"
-          
+
           # Get default branch of template repo
           DEFAULT_BRANCH=$(git remote show origin | grep 'HEAD branch' | cut -d' ' -f5)
           echo "🔗 Creating Pull Request in template repository..."
           echo "Source branch: $BRANCH_NAME"
           echo "Base branch: $DEFAULT_BRANCH"
-          
+
           # Create PR title and body
           PR_TITLE="feat: Sync changes from ${{ needs.detect-changes.outputs.source-repo }}"
           PR_BODY="## 🔄 Template Sync Request\n\n"
@@ -295,22 +295,22 @@ jobs:
           PR_BODY+="- Commit: ${{ needs.detect-changes.outputs.commit-sha }}\n"
           PR_BODY+="- Sync Date: $(date -u '+%Y-%m-%d %H:%M:%S UTC')\n\n"
           PR_BODY+="**Changes Included:**\n"
-          
+
           if [ "${{ needs.detect-changes.outputs.windsurf-changed }}" == "true" ]; then
             PR_BODY+="- ✅ .windsurf/ directory updates\n"
           fi
-          
+
           if [ "${{ needs.detect-changes.outputs.rag-docs-changed }}" == "true" ]; then
             PR_BODY+="- ✅ .rag-docs/ directory updates\n"
           fi
-          
+
           PR_BODY+="\n---\n\n"
           PR_BODY+="*This PR was automatically created by the Template Sync workflow.*"
-          
+
           # Save PR content to file
           echo "$PR_TITLE" > /tmp/pr_title.txt
           echo "$PR_BODY" > /tmp/pr_body.txt
-          
+
           echo "PR Title: $(cat /tmp/pr_title.txt)"
           echo "PR Body:"
           cat /tmp/pr_body.txt
@@ -319,16 +319,16 @@ jobs:
         run: |
           cd template-repo
           BRANCH_NAME="${{ steps.repo-name.outputs.branch-name }}"
-          
+
           # Get default branch of template repo
           DEFAULT_BRANCH=$(git remote show origin | grep 'HEAD branch' | cut -d' ' -f5)
-          
+
           # Set GitHub CLI to work with template repo
           gh repo set-default ${{ env.TEMPLATE_REPO }}
-          
+
           # Check if PR already exists
           PR_EXISTS=$(gh pr list --head "$BRANCH_NAME" --base "$DEFAULT_BRANCH" --json number --jq 'length')
-          
+
           if [ "$PR_EXISTS" -eq 0 ]; then
             echo "📝 Creating new Pull Request in template repository..."
             gh pr create \
@@ -355,7 +355,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate-commit-msg, check-source-repository, detect-changes]
     if: needs.check-source-repository.outputs.should-run == 'true' && needs.detect-changes.outputs.has-changes == 'false'
-    
+
     steps:
       - name: Skip sync
         run: |
@@ -370,7 +370,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate-commit-msg
     if: failure() && needs.validate-commit-msg.result == 'failure'
-    
+
     steps:
       - name: Commit validation failed
         run: |
